--- a/restaurant/style.css
+++ b/restaurant/style.css
@@ -177,13 +177,16 @@ footer a:hover {
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease;
+    transition: transform 0.6s ease;
 }
 .featured {
     border: 4px solid var(--hover);
+    border-radius: 40px;
+    scale: 110%;
 }
 .card:hover {
-    transform: translateY(-10px);
+    transform: rotate(0.005turn) translateY(-10px) scale(120%);
+    /* translateY(-10px),  */
     box-shadow: 0 8px 16px rgba(0,0,0,0.4);
 }
 .card-container {
